--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.aarstrand.zindre.pokechecklist">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.aarstrand.zindre.pokechecklist">
 
     <application
-            android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme">
+            android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
         <activity
-                android:name=".MainActivity"
+                android:name=".ui.NewMainActivity"
                 android:label="@string/title_activity_main"
                 android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
